# server

./: Cargo.toml  justfile  setting.json
src/: lib.rs  main.rs
src/handlers/: auth.rs  public.rs  todos.rs
src/logs/: init.rs
src/models/: auth_form_model.rs  mod.rs  templates.rs
src/routers/: routes.rs
templates/: index.html
templates/pages/: create.html  home.html  server_error.html  sign_in.html  sign_up.html  todo.html
