[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = {version = "0.12.1"}
axum = {version = "0.7.9", features = ["macros"]}
tokio = {version = "1.41.1", features = ["full"]}
tower-http = {version = "0.6.2", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}